# Embedded-C-Basics

./: CMakeLists.txt  data_structures.c  deneme.c
data_structures/: linkedlist.c  linkedlist.h  main.c  queue.c  queue.h  stack.c  stack.h  tree.c  tree.h
io_exercises/: arac.c  car.c  deneme2.c  deneme3.c  deneme4.c  formatted_io.c
